# src/main/java/edu/xtu/bbs/report/model/ReportTargetType.java
@@ -1,0 +1,10 @@
+package edu.xtu.bbs.report.model;
+
+/**
+ * Types of entities that can be reported.
+ */
+public enum ReportTargetType {
+    USER,
+    POST,
+    COMMENT
+}
